# lockpipes

./: Cargo.toml  LICENSE.txt  README.md
kubernetes/: ConfigMap.yaml  DaemonSet.yaml  Namespace.yaml  kustomization.yaml
src/: command.rs  lib.rs  logging.rs
