[package]
name = "lockpipes"
version = "0.10.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
description = "a commitment-free alternative to sleep"

[dependencies]
log = "^0.4.0"  # SPDX-License-Identifier: MIT OR Apache-2.0
nix = "^0.18.0" # SPDX-License-Identifier: MIT
