[package]
name = "lockpipes"
version = "1.0.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
description = "a commitment-free alternative to sleep"
repository = "https://github.com/colstrom/lockpipes"
homepage = "https://colstrom.github.io/lockpipes"
documentation = "https://docs.rs/lockpipes"

[dependencies]
env_logger = "^0.8"
log = "^0.4"
nix = "^0.21"
structopt = "0.3.21"
